# SecFlow

./: .gitignore  .secflow.yml  CHANGELOG.md  LICENSE  README.md  README_ADVANCED.md  SECURITY.md  final_demo.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO.md  RELEASE_POLICY.md  ROADMAP.md  THREAT_MODEL.md
examples/: advanced_usage.py  basic_usage.py  complete_demo.py  integration_test.py  quickstart_advanced.py  system_check.py
pyseckit/: __init__.py  cli.py
pyseckit/ci_cd/: __init__.py  manager.py
pyseckit/cloud/: __init__.py  checkov.py
pyseckit/core/: config.py  exceptions.py  scanner.py
pyseckit/dast/: __init__.py  zap.py
pyseckit/integrations/: __init__.py  elasticsearch_integration.py  notifications.py
pyseckit/plugins/: __init__.py  base.py  registry.py  scanner_plugin.py
pyseckit/reporting/: __init__.py  manager.py
pyseckit/sast/: __init__.py  bandit.py  safety.py  semgrep.py
pyseckit/secret_scan/: __init__.py  gitleaks.py  trufflehog.py
pyseckit/threat_model/: __init__.py  advanced_generator.py  generator.py
pyseckit/web/: __init__.py  api.py  app.py  dashboard.py
tests/: test_basic.py
