[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secflow"
version = "1.1.0"
description = "Security orchestration framework for deterministic DevSecOps scan pipelines"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "SecFlow Team", email = "team@secflow.dev" }]
maintainers = [{ name = "SecFlow Team", email = "team@secflow.dev" }]
requires-python = ">=3.10"
keywords = ["security", "devsecops", "sast", "dast", "threat-modeling"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "click>=8.1.7",
  "jinja2>=3.1.4",
  "pydantic>=2.8.2",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "rich>=13.7.1",
]

[project.optional-dependencies]
scanners = [
  "bandit>=1.7.9",
  "checkov>=3.2.232",
  "safety>=3.2.4",
  "semgrep>=1.94.0",
]
web = [
  "flask>=3.0.3",
  "flask-cors>=4.0.1",
]
integrations = [
  "elasticsearch>=8.15.0",
  "python-gitlab>=4.6.0",
  "pygithub>=2.4.0",
]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.9.7",
]

[project.urls]
Homepage = "https://github.com/WaiperOK/SecFlow"
Repository = "https://github.com/WaiperOK/SecFlow"
Issues = "https://github.com/WaiperOK/SecFlow/issues"

[project.scripts]
secflow = "pyseckit.cli:main"
sf = "pyseckit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyseckit*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]
